<resources>
    <string name="app_name">Taskaty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_login_title">Hello Again!\nWelcome Back</string>
    <string name="text_login_description">Login to your Account</string>
    <string name="text_have_an_account">Don’t have an account? </string>
    <string name="text_signup">Sign up</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_onboarding_description">Your future is created by what you\n do today, not tomorrow. \nby Robert Kiyosaki</string>
    <string name="text_onboarding_title">Manage Your Daily\nTasks with Taskaty</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_signup_title">Hello! Sign up\nto Get Started</string>
    <string name="text_signup_description">Create your Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="personal">Personal</string>
    <string name="team">Team</string>
    <string name="taskaty">Taskaty</string>
    <string name="tabs">tabs</string>
    <string name="in_progress">In Progress</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="view_all">View all</string>
    <string name="upcoming_task">Upcoming task</string>
    <string name="create_personal_task">Create Personal Task</string>
    <string name="create_team_task">Create Team Task</string>
    <string name="timeTextExample">3 : 30</string>
    <string name="dateTextExample">5 april 2023</string>
    <string name="todoText">Todo</string>
    <string name="Todo_title">The Title of the task Given</string>
    <string name="Team_member_circle">M</string>
    <string name="inProgress_body_Text">Vorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeosgggggggggggggggggggggggggggggggggggggggggggggggg.</string>
    <string name="green_inProgress_status">In progress</string>
    <string name="inProgress_time_text">3 : 30</string>
    <string name="active_tasks_count">23 Active Tasks</string>
    <string name="text_time">3:22 AM</string>
    <string name="text_date">5 April 2023</string>
    <string name="text_content">Vorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="title_text">Title afldnhfjkadfn adlkfn dalfk adlf nadlf afd fsfd sd fds fs df sd</string>
    <string name="task_details">Task Details</string>
    <string name="done">Done</string>
    <string name="description">Description</string>
    <string name="submit"><u>Submit</u></string>
    <string name="text_button_login">Login</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="something_has_an_error_check_your_internet_connection_then_try_again">something has an error check your internet connection then try again</string>
    <string name="bottom_sheet_button">bottom sheet button</string>
    <string name="show_password">show password</string>
    <string name="text_input_type">abcdelfhijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,0123456789</string>
</resources>