<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:background="@color/background_color"
    tools:context=".app.ui.fragments.SignupFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/text_color_87"
        android:text="@string/text_signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_signup_description"
        android:textColor="@color/text_color_50"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/edit_text_user"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:hint="@string/hint_user_name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="@color/text_color_87"
        android:textColorHint="@color/text_color_60"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="@+id/text_discription"
        app:layout_constraintTop_toBottomOf="@+id/text_discription" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="@color/text_color_87"
        android:textColorHint="@color/text_color_60"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_user" />

    <EditText
        android:id="@+id/editTextTextPersonNamee"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:textColor="@color/text_color_87"
        android:textColorHint="@color/text_color_60"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/text_signup"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNamee" />

</androidx.constraintlayout.widget.ConstraintLayout>