<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_onboarding"
    android:padding="16dp"
    tools:context=".app.ui.fragments.onBoarding.OnBoardingFragment">


    <ImageView
        android:id="@+id/image_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/onboarding_image"
        android:src="@drawable/image_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/text_onbording"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />


    <LinearLayout
        android:id="@+id/text_onbording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintTop_toBottomOf="@+id/image_onboarding"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_onboarding_title"
            android:textColor="@color/text_color_87"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:lines="2"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_color_50"
            android:fontFamily="@font/poppins"
            android:text="@string/text_onboarding_description"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/text_get_started"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_onbording" />
</androidx.constraintlayout.widget.ConstraintLayout>